--- a/Projects.html
+++ b/Projects.html
@@ -9,7 +9,7 @@
       
 <body>
     <header class="header">
-        <a href="Index.html" class="logo">Portfolio</a>
+        <a href="index.html" class="logo">Portfolio</a>
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
