--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
           <li><a href="Projects.html">GAMES</a></li>
-          <li><a href="#about">UI UX</a></li>
+          <li><a href="UI.html">UI UX</a></li>
           <li><a href="#careers">VFX</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -32,7 +32,7 @@
     <div class="container">
         <article class="projects-list">
             <article class="project">
-                <img src="https://w0.peakpx.com/wallpaper/31/436/HD-wallpaper-dark-souls-dark-souls-iii-fire-keeper-dark-souls.jpg">
+                <img src="assets/Projects/LS4.png">
                 <article class="portfolio-layer">
                     <h3>Liminal Squad</h3>
                     <p>3D, Horror, Action</p>
@@ -59,58 +59,29 @@
 
     <!-- UI/UX-->
     
-    <section id="portfolio">
-        <hr><br><br><br><br>
-        <h1 class="sub-title">UI/UX</h1>
-        <div class="container">
-            <article class="projects-list">
-                <article class="project">
-                    <img src="https://w0.peakpx.com/wallpaper/31/436/HD-wallpaper-dark-souls-dark-souls-iii-fire-keeper-dark-souls.jpg">
-                    <article class="portfolio-layer">
-                        <h3>Liminal Squad</h3>
-                        <p>3D, Horror, Action</p>
-                    </article>
-                </article>
-                <article class="project">
-                    <img src="assets/Evanescent.png">
-                    <article class="portfolio-layer">
-                        <h3>Evanescent</h3>
-                        <p>3D, Fantasy, Action Combat</p>
-                    </article>
-                </article>
-                <article class="project">
-                    <img src="assets/UTC.png">
-                    <article class="portfolio-layer">
-                        <h3>Under The Cave</h3>
-                        <p>2D, Platformer</p>
-                    </article>
-                </article>
-                <article class="project">
-                    <img src="assets/UTC.png">
-                    <article class="portfolio-layer">
-                        <h3>Under The Cave</h3>
-                        <p>2D, Platformer</p>
-                    </article>
-                </article>
-                <article class="project">
-                    <img src="assets/UTC.png">
-                    <article class="portfolio-layer">
-                        <h3>Under The Cave</h3>
-                        <p>2D, Platformer</p>
-                    </article>
-                </article>
-                <article class="project">
-                    <img src="assets/UTC.png">
-                    <article class="portfolio-layer">
-                        <h3>Under The Cave</h3>
-                        <p>2D, Platformer</p>
-                    </article>
-                </article>
-            </article>
-            <a href="UI.html" class="button seeAll">See All</a>
+    <section class="image-text-section">
+        <!-- Section Image et texte -->
+        <hr><br><br><br><br>        
+        <!-- Galerie d'images -->
+        <div class="image-gallery">
+            <h1>UI/UX</h1>
+            <br><br>
+            <div class="gallery-grid">
+                <img src="assets/Projects/LS.png" alt="Image 1">
+                <img src="assets/Projects/LS1.png" alt="Image 2">
+                <img src="assets/Projects/LS4.png" alt="Image 3">
+                <img src="assets/Projects/LS3.png" alt="Image 4">
+            </div>
+            <div class="gallery-grid">
+                <img src="assets/Projects/LS.png" alt="Image 1">
+                <img src="assets/Projects/LS1.png" alt="Image 2">
+                <img src="assets/Projects/LS4.png" alt="Image 3">
+                <img src="assets/Projects/LS3.png" alt="Image 4">
+            </div>
         </div>
-        </section>
-
+        <a href="UI.html" class="button seeAll">See All</a>
+        
+    </section>
 </body>
 <footer class="footer">
     <p>Contact me on <a href="https://www.linkedin.com/in/evhan-didier/" target="_blank" class="linkedin-link">LinkedIn</a>.</p>
