--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
           <li><a href="Projects.html">GAMES</a></li>
-          <li><a href="UI.html">UI UX</a></li>
+          <li><a href="UI.html">UI/UX</a></li>
           <li><a href="#careers">VFX</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="https://www.linkedin.com/in/evhan-didier/">LINKEDIN</a></li>
         </ul>
       </header>
       <div class="banner">
@@ -67,16 +67,14 @@
             <h1>UI/UX</h1>
             <br><br>
             <div class="gallery-grid">
-                <img src="assets/Projects/LS.png" alt="Image 1">
-                <img src="assets/Projects/LS1.png" alt="Image 2">
-                <img src="assets/Projects/LS4.png" alt="Image 3">
-                <img src="assets/Projects/LS3.png" alt="Image 4">
+                <img src="assets/UI/3.png" alt="Image 1">
+                <img src="assets/UI/6.png" alt="Image 2">
+                <img src="assets/UI/9.png" alt="Image 3">
             </div>
             <div class="gallery-grid">
-                <img src="assets/Projects/LS.png" alt="Image 1">
-                <img src="assets/Projects/LS1.png" alt="Image 2">
-                <img src="assets/Projects/LS4.png" alt="Image 3">
-                <img src="assets/Projects/LS3.png" alt="Image 4">
+                <img src="assets/UI/12.png" alt="Image 1">
+                <img src="assets/UI/Menu UI.png" alt="Image 2">
+                <img src="assets/UI/TQ3.png" alt="Image 3">
             </div>
         </div>
         <a href="UI.html" class="button seeAll">See All</a>
