--- a/Projects.html
+++ b/Projects.html
@@ -14,9 +14,9 @@
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
           <li><a href="Projects.html">GAMES</a></li>
-          <li><a href="UI.html">UI UX</a></li>
+          <li><a href="UI.html">UI/UX</a></li>
           <li><a href="#careers">VFX</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="https://www.linkedin.com/in/evhan-didier/">LINKEDIN</a></li>
         </ul>
       </header>
       <div class="banner">
@@ -56,7 +56,7 @@
     <!-- Vidéo -->
     <div class="video-container">
         <h1>WIP</h1>
-        <iframe src="assets/LSLD.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="assets/LSLD.mp4" frameborder="0" allow="accelerometer; stop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </section>
 
