--- a/UI.html
+++ b/UI.html
@@ -35,7 +35,7 @@
         <div class="text-container">
             <h1>Digimon Survive(2022)</h1>
             <p>
-                I set myself the goal of recreating UIs from existing games. The images below show the process. On the left is the UI from the game in question, in the center is the background used as the base, and on the right is the result of my work in Illustrator.
+                I set myself the goal of recreating UIs from existing games. The images below show the process. On the left is the UI from the game in question, in the center is the background used as the base, and on the right is the result of my work.
             </p>
         </div>
         <div class="image-container">
@@ -64,7 +64,7 @@
             <div class="text-container">
                 <h1>YS IX(2019)</h1>
                 <p>
-                    I set myself the goal of recreating UIs from existing games. The images below show the process. On the left is the UI from the game in question, in the center is the background used as the base, and on the right is the result of my work in Illustrator.
+                    I set myself the goal of recreating UIs from existing games. The images below show the process. On the left is the UI from the game in question, in the center is the background used as the base, and on the right is the result of my work.
                 </p>
             </div>
             <div class="image-container">
@@ -93,7 +93,7 @@
             <div class="text-container">
                 <h1>A Plague Tale Requiem(2022)</h1>
                 <p>
-                    I set myself the goal of recreating UIs from existing games. The images below show the process. On the left is the UI from the game in question, in the center is the background used as the base, and on the right is the result of my work in Illustrator.
+                    I set myself the goal of recreating UIs from existing games. The images below show the process. On the left is the UI from the game in question, in the center is the background used as the base, and on the right is the result of my work.
                 </p>
             </div>
             <div class="image-container">
@@ -122,7 +122,7 @@
             <div class="text-container">
                 <h1>Age of Wonders Planetfall(2019)</h1>
                 <p>
-                    I set myself the goal of recreating UIs from existing games. The images below show the process. On the left is the UI from the game in question, in the center is the background used as the base, and on the right is the result of my work in Illustrator.
+                    I set myself the goal of recreating UIs from existing games. The images below show the process. On the left is the UI from the game in question, in the center is the background used as the base, and on the right is the result of my work.
                 </p>
             </div>
             <div class="image-container">
