--- a/Projects.html
+++ b/Projects.html
@@ -35,6 +35,8 @@
             <h1>Liminal Squad(2025)</h1>
             <p>
                 Liminal Squad is a cooperative horror game where you play as a member of an elite intervention team. In a top-secret facility, scientists have opened a portal to liminal spaces, mysterious and eerie places where the rules of our world no longer apply. Your mission: retrieve the cherub while escaping from the creatures. Together, you and your squad must make your way through these gloomy spaces using parkour skills. Cooperation is your only chance to overcome these challenges… so choose your squad wisely, or be prepared to serve as bait!
+            <br><br>
+                Roles: Game Designer, Narrative Designer, Level Design, Level Art.
             </p>
         </div>
         <div class="image-container">
@@ -72,6 +74,8 @@
                     Embark on a journey as a determined traveler, aiming to capture the radiance that illuminates this world. Confront challenges, uncover secrets, and carve your path through this adventure where the pursuit of light will unveil unexpected mysteries.
                     <br><br>
                     "Evanescent" is an adventure game that plunges players into a fantastical and mysterious world. Players assume the role of a traveler who emerges in this realm to capture its luminance. Through exploration, they gradually unveil concealed secrets buried within the environment.
+                    <br><br>
+                    Roles: Game Designer, Narrative Designer, Level Design, Level Art, VFX Artist.
                 </p>
             </div>
             <div class="image-container">
@@ -115,8 +119,8 @@
                 Depression is like a cave, you can fall into it without even noticing it, and it is your choice to give up or continue moving forward.
                 <br><br>
                 Under The Cave is a 2D Platformer game where you play a girl in her dream who try to escape from her depression. 
-
-
+                <br><br>
+                Roles: Game Designer, Narrative Designer, Level Design, Level Art.
             </p>
         </div>
         <div class="image-container">
