--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
           <li><a href="Projects.html">GAMES</a></li>
           <li><a href="UI.html">UI/UX</a></li>
           <li><a href="#careers">VFX</a></li>
-          <li><a href="https://www.linkedin.com/in/evhan-didier/">LINKEDIN</a></li>
+          <li><a href="About.html">ABOUTME</a></li>
         </ul>
       </header>
       <div class="banner">
         <div class="banner-text">
-            "Here we climb by imagination, not by sense."<br>Dante Alighieri, <i>Divine Comedy</i>
+            "Fear not the dark, my friend. And let the feast begin!"<br>Ringfinger Leonhard, <i>Dark Souls III</i>
         </div>
     </div>
   <!-- Pojects Grid -->
