--- a/Projects.html
+++ b/Projects.html
@@ -16,7 +16,7 @@
           <li><a href="Projects.html">GAMES</a></li>
           <li><a href="UI.html">UI/UX</a></li>
           <li><a href="#careers">VFX</a></li>
-          <li><a href="https://www.linkedin.com/in/evhan-didier/">LINKEDIN</a></li>
+          <li><a href="About.html">ABOUTME</a></li>
         </ul>
       </header>
       <div class="banner">
