--- a/UI.html
+++ b/UI.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Projects</title>
-        <link rel="stylesheet" href="css/projectsStyle.css">
+        <link rel="stylesheet" href="css/uiStyle.css">
         <script src="script.js"></script>
       </head>
       
@@ -16,12 +16,12 @@
           <li><a href="Projects.html">GAMES</a></li>
           <li><a href="UI.html">UI/UX</a></li>
           <li><a href="#careers">VFX</a></li>
-          <li><a href="https://www.linkedin.com/in/evhan-didier/">LINKEDIN</a></li>
+          <li><a href="About.html">ABOUTME</a></li>
         </ul>
       </header>
       <div class="banner">
         <div class="banner-text">
-            "Here we climb by imagination, not by sense."<br>Dante Alighieri, <i>Divine Comedy</i>
+            "Now cometh the age of the stars.<br> A thousand year voyage under the wisdom of the Moon.<br> Here beginneth the chill night that encompasses all, reaching the great beyond."<br>Ranni, <i>Elden Ring</i>
         </div>
     </div>
     <!-- Pojects Grid -->
