--- a/Projects.html
+++ b/Projects.html
@@ -104,7 +104,7 @@
         <!-- Vidéo -->
         <div class="video-container">
             <h1>Trailer</h1>
-            <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="assets/Trailer_Evanescent.mp4" frameborder="0" allow="accelerometer; stop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
 
