--- a/UI.html
+++ b/UI.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>Projects</title>
+        <title>UI</title>
         <link rel="stylesheet" href="css/uiStyle.css">
         <script src="script.js"></script>
       </head>
