--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </article>
             </article>
         </article>
-        <a href="projects.html" class="button seeAll">See All</a>
+        <a href="Projects.html" class="button seeAll">See All</a>
     </div>
     </section>
 
