--- a/Projects.html
+++ b/Projects.html
@@ -58,7 +58,9 @@
     <!-- Vidéo -->
     <div class="video-container">
         <h1>WIP</h1>
-        <iframe src="assets/LSLD.mp4" frameborder="0" allow="accelerometer; stop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <video src="assets/LSLD.mp4" controls width="50%" height="50%" preload="metadata">
+            Your browser does not support the video tag.
+        </video>
     </div>
 </section>
 
@@ -104,7 +106,9 @@
         <!-- Vidéo -->
         <div class="video-container">
             <h1>Trailer</h1>
-            <iframe src="assets/Trailer_Evanescent.mp4" frameborder="0" allow="accelerometer; stop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <video src="assets/Trailer_Evanescent.mp4" controls width="50%" height="50%" preload="metadata">
+                Your browser does not support the video tag.
+            </video>
         </div>
     </section>
 
