--- a/Projects.html
+++ b/Projects.html
@@ -43,8 +43,15 @@
             <img src="assets/Projects/Liminal.png" alt="Image à droite" class="image-right">
         </div>
     </div>
+    <div class="instagram-button">
+        <a href="https://www.instagram.com/liminal_squad/" target="_blank" class="btn-instagram">
+            Follow us on Instagram
+        </a>
+    </div>
+    
 
     <!-- Galerie d'images -->
+     <br><br>
     <div class="image-gallery">
         <h1>Screenshots</h1>
         <div class="gallery-grid">
