--- a/UI.html
+++ b/UI.html
@@ -15,7 +15,6 @@
         <ul class="menu">
           <li><a href="Projects.html">GAMES</a></li>
           <li><a href="UI.html">UI/UX</a></li>
-          <li><a href="#careers">VFX</a></li>
           <li><a href="About.html">ABOUTME</a></li>
         </ul>
       </header>
@@ -171,7 +170,7 @@
         <!-- Vidéo -->
     <div class="video-container">
         <h1>Menu</h1>
-        <iframe src="assets/ui/Bunri_Old_Menu.mp4" frameborder="0" allow="accelerometer; stop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://youtu.be/KYSS0zhFums" frameborder="0" allow="accelerometer; stop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     
     </section>
