--- a/About.html
+++ b/About.html
@@ -15,7 +15,6 @@
         <ul class="menu">
           <li><a href="Projects.html">GAMES</a></li>
           <li><a href="UI.html">UI/UX</a></li>
-          <li><a href="#careers">VFX</a></li>
           <li><a href="About.html">ABOUTME</a></li>
         </ul>
       </header>
@@ -43,7 +42,9 @@
         </div>
     </div>
     <div class="image-container">
-        <img src="assets/CV2025.jpg" alt="Miniature" class="clickable-image" onclick="openModal()">
+        <img src="assets/CV2025.png" alt="Miniature" class="clickable-image" onclick="openModal()">
+        <br><br>
+        <a href="assets/CV_Evhan_DIDIER_GameDesigner.pdf" download="CV_Evhan_DIDIER.pdf">Télécharger en PDF</a>
     </div>
 
     <!-- Fenêtre modale -->
