--- a/UI.html
+++ b/UI.html
@@ -170,7 +170,7 @@
         <!-- Vidéo -->
     <div class="video-container">
         <h1>Menu</h1>
-        <iframe src="https://youtu.be/KYSS0zhFums" frameborder="0" allow="accelerometer; stop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="assets/UI/Bunri_Old_Menu.mp4" frameborder="0" allow="accelerometer; stop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     
     </section>
